--- a/node/package.json
+++ b/node/package.json
@@ -18,6 +18,9 @@
     "mysql2": "^3.15.3",
     "nodemon": "^3.1.11"
   },
+  "scripts": {
+  "start": "node index.js"
+}
   "devDependencies": {
     "dotenv": "^17.2.3"
   }
