--- a/node/package.json
+++ b/node/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "node",
+  "name": "micancha-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "dev": "nodemon src/index.js"
   },
   "author": "",
@@ -16,12 +17,9 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "mysql2": "^3.15.3",
-    "nodemon": "^3.1.11"
-  },
-  "scripts": {
-  "start": "node index.js"
-}
-  "devDependencies": {
     "dotenv": "^17.2.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
